# ARCHIVE_MSU1

server_cpp/: CMakeLists.txt  README.md  unix_env-prep.sh  win_x64_env-prep.bat
server_cpp/src/web_serv/: CMakeLists.txt  credentials.txt  salt.txt  targets.xls  web_serv.cpp
server_cpp/src/web_serv/client/: README.md  client.hpp
server_cpp/src/web_serv/external_headers/: boost_include.h  mongo_include.h  networking_include.h  openssl_include.h
server_cpp/src/web_serv/handler/: README.md
server_cpp/src/web_serv/helpers/: README.md  helpers.cpp  helpers.hpp
server_cpp/src/web_serv/router/: README.md  router.cpp  router.hpp
server_cpp/src/web_serv/server/: server.cpp  server.hpp
server_cpp/tests/web_serv_tests/: main.py
server_cpp/tests/web_serv_tests/commands/: test_1.py  test_2.py  test_3.py
